--- a/js/pages/invite/rule.html
+++ b/js/pages/invite/rule.html
@@ -1,14 +1,10 @@
 <style>
-/*.content-rule{
-    background-color:white;
-    border-radius: 8px;
-    height: auto;
-    width: 80%;
+.content-rule{
+    height: 80vh;
     margin-left: auto;
     margin-right: auto;
     transition: margin-top 100ms;
-    position: relative;
-}*/
+}
 </style>
 <div class="content-rule">
     <div class="mui-content-padded" style="padding: 1rem;">
