--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -79,8 +79,9 @@
                     {{el.name}}
                 </div>
             </section>
-            <div class="bs-text-smaller" style="width: 95%;margin: 10px auto;padding: 10px">
-                <span class="isAgree bs-bg-black"></span>我同意<span class="bs-text-gold">《入住条款》</span>
+            <div class="bs-text-smaller" style="width: 95%;margin: 10px auto;padding: 10px" ms-on-tap="clickIsAgree">
+                <span class="isAgree" ms-class-1="unchecked: !isAgree" ms-class-2="checked:isAgree"></span>
+                我同意<span class="bs-text-gold" ms-on-tap="openRule">《入住条款》</span>
             </div>
             <div class="bs-text-large" style="width: 95%;padding: 10px 0 14px 10px;margin: 0 auto;">更多房间</div>
             <div class="swiper-container swiper2">
