未支付样式修改

--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -91,9 +91,9 @@ input[type=checkbox] {
                 <br>
                 <span style=" margin-top: 8px;" ms-repeat-cl="el.orderCustomerList">{{cl.name}}&nbsp;</span>
                 <br>
-                <span class="bs-text-large bs-text-red" style="float: right; margin: 20px 20px 0 0;">¥{{el.amount}}</</span>
+                <span class="bs-text-large bs-text-red" style="float: right; margin: 20px 15px 0 0;">¥{{el.amount}}</</span>
             </h5>
-
+            <span style="clear: both;">&nbsp;</span>
         </li>
     </ul>
     <div class="bs-text-large" style="text-align: center;margin-top: -14px;background: #fff;height: 40px;padding: 10px;" ms-click="goHotelById(data.hotel.id)" ms-if="data.status==1">
