--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -21,7 +21,7 @@
                     <img src="../img/icon/checkOut.png" style="margin-top: 8px;margin-left: 4px;" />
                 </div>
                 <div class="grid-text">退房</div>
-            </div><div class="control-item">
+            <!-- </div><div class="control-item">
                 <div class="grid-img" style="background-color: #eee3cd;">
                     <img src="../img/icon/temp.png" style="margin-top: 8px;margin-left: 0px;" />
                 </div>
@@ -31,7 +31,7 @@
                     <img src="../img/icon/controller.png" style="margin-top: 8px;margin-left: 1px;" />
                 </div>
                 <div class="grid-text">遥控器</div>
-            </div>
+            </div> -->
         </div>
         <div style="clear: both;"></div>
         <ul class="mui-table-view mui-grid-view mui-grid-9 icon" style="background-color: #fafafa;">
