--- a/js/pages/room/pop-btn.html
+++ b/js/pages/room/pop-btn.html
@@ -5,7 +5,7 @@
 	}
 </style>
 <div style="position: fixed;bottom: 20px;width: 100%;" class="mui-text-center" ms-controller="aInfoBtn">
-	<button class="popover-Button mui-btn mui-btn-primary mui-btn-outlined" onclick="$('.popover').addClass('popover-hide');popover_ishide = true;">
+	<button class="popover-Button mui-btn mui-btn-danger mui-btn-outlined" onclick="$('.popover').addClass('popover-hide');popover_ishide = true;">
 		取消
 	</button>&emsp;
 	<button class='popover-Button mui-btn mui-btn-danger mui-btn-outlined' ms-click="select">
